--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+alembic==0.7.2
+bleach==1.4.1
+blinker==1.3
+chardet==2.3.0
 Flask==0.10.1
 Flask-Bootstrap==3.3.0.1
 Flask-HTTPAuth==2.3.0
@@ -6,6 +10,18 @@ Flask-Mail==0.9.1
 Flask-Migrate==1.3.0
 Flask-Moment==0.4.0
 Flask-PageDown==0.1.5
-Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
+Flask-SQLAlchemy==2.0
 Flask-WTF==0.10.3
+ForgeryPy==0.1
+html5lib==0.999
+itsdangerous==0.24
+Jinja2==2.7.3
+lamson==1.3.4
+Mako==1.0.0
+Markdown==2.5.2
+MarkupSafe==0.23
+six==1.8.0
+SQLAlchemy==0.9.8
+Werkzeug==0.9.6
+WTForms==2.0.1
