--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ alembic==0.7.2
 bleach==1.4.1
 blinker==1.3
 chardet==2.3.0
+docutils==0.12
 Flask==0.10.1
 Flask-Bootstrap==3.3.0.1
+Flask-FlatPages==0.6
 Flask-HTTPAuth==2.3.0
 Flask-Login==0.2.11
 Flask-Mail==0.9.1
@@ -18,9 +20,16 @@ html5lib==0.999
 itsdangerous==0.24
 Jinja2==2.7.3
 lamson==1.3.4
+lockfile==0.10.2
 Mako==1.0.0
 Markdown==2.5.2
 MarkupSafe==0.23
+mock==1.0.1
+nose==1.3.4
+python-daemon==2.0.5
+python-modargs==1.7
+pytz==2014.10
+PyYAML==3.11
 six==1.8.0
 SQLAlchemy==0.9.8
 Werkzeug==0.9.6
