--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ python-daemon==2.0.5
 python-modargs==1.7
 pytz==2014.10
 PyYAML==3.11
+requests==2.5.3
 six==1.8.0
 SQLAlchemy==0.9.8
 Werkzeug==0.9.6
